solved bottomtext alignment

--- a/style.css
+++ b/style.css
@@ -778,6 +778,10 @@ hr.rainbow {
     z-index: 50;
   }
 
+  .product-bottom-text {
+    margin: auto;
+  }
+
   .contact-section-info {
     flex-direction: column;
     align-items: center;
